--- a/POMwithpagefactory/test-output/index.html
+++ b/POMwithpagefactory/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>D:\eclipse\MavenWorkspace\POMwithpagefactory\testng.xml</span>
+                    <span>C:\Users\Rahul BR\git\testdemotour\POMwithpagefactory\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Testscripts.Testscript1" hash-for-method="totalcount(nino070, parayil007)">totalcount(nino070, parayil007)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Testscripts.Testscript1" hash-for-method="signdoubleclick">signdoubleclick</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -125,10 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="totalcount(nino070, parayil007)">
-                  </a> <!-- totalcount(nino070, parayil007) -->
-                  <span class="method-name">totalcount</span>
-                  <span class="parameters">(nino070, parayil007)</span>
+                  <a name="signdoubleclick">
+                  </a> <!-- signdoubleclick -->
+                  <span class="method-name">signdoubleclick</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse\MavenWorkspace\POMwithpagefactory\testng.xml</span>
+            <span class="header-content">C:\Users\Rahul BR\git\testdemotour\POMwithpagefactory\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,14 +189,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'totalcount')
+data.setCell(0, 1, 'signdoubleclick')
 data.setCell(0, 2, 'Testscripts.Testscript1')
-data.setCell(0, 3, 26567);
+data.setCell(0, 3, 2148);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -229,8 +228,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">totalcount(nino070, parayil007)</span>
-                <span class="method-start">6172 ms</span>
+                <span class="method-name">signdoubleclick</span>
+                <span class="method-start">5225 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
